--- a/RPS.html
+++ b/RPS.html
@@ -12,7 +12,7 @@
 
             <div class="gametitle">
 
-                <h1 id="gameName">ROCK PAPER SCISSORS</h1>
+                <h1 id="gameName">ROCK PAPER SCISSORS v2</h1>
 
             </div>
 
