--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <div class="gametitle">
 
-                <h1 id="gameName">ROCK PAPER SCISSORS v3</h1>
+                <h1 id="gameName">ROCK PAPER SCISSORS</h1>
 
             </div>
 
@@ -95,8 +95,8 @@
         
     </div>
 
-    <div class="moves">
-
+    <div class="logOfMoves">
+        
     </div>
 
 
